# secondweb

./: Procfile  README.md  pyproject.toml  requirements.txt
creators/: api.py  apps.py  forms.py  models.py  seriallizers.py  urls.py  views.py
creators/migrations/: 0001_initial.py  0002_delete_restaurant.py
restaurant/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_categoryofmeals_meal_restaurant_delete_sushishop_and_more.py  0003_meal_price_meal_weight_alter_meal_name.py  0004_alter_categoryofmeals_options_alter_meal_options_and_more.py  0005_alter_categoryofmeals_options_alter_meal_options_and_more.py  0006_order.py  0007_restaurant_user.py  0008_rename_user_restaurant_owner_alter_restaurant_rating.py
secondweb/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: mycss.css  test.css
templates/: home.html
templates/creators/: add_category.html  add_meal.html  auth.html  base.html  edit_category.html  edit_meal.html  home.html  list_category.html  list_meal.html  profile.html  sign_up.html
templates/restaurants/: base.html  category.html  index.html  meal_detail.html  rest.html
templates/validform/: formpage.html
testurl/: urls.py  views.py
validform/: apps.py  forms.py  urls.py  views.py
