[tool.poetry]
name = "secondweb"
version = "0.1.0"
description = ""
authors = ["flezzzer <141737861+flezzzer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
django-bootstrap = "^0.2.4"
3 = "^0.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
