[tool.poetry]
name = "secondweb"
version = "0.1.0"
description = ""
authors = ["flezzzer <141737861+flezzzer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
django-bootstrap = "^0.2.4"
3 = "^0.0.0"
djangorestframework = "^3.15.1"
django-rest-framework-social-oauth2 = "^1.2.0"
django-extensions = "^3.2.3"
werkzeug = "^3.0.2"
pyopenssl = "^24.1.0"
unicorn = "^2.0.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
